# fast_sssp

./: AGENTS.md  Cargo.toml  README.md  plan.md
examples/: bmssp_benchmark.rs  city_pathfinding.rs  colorful_city_demo.rs  hierarchical_benchmark.rs  hub_heavy_benchmark.rs  hub_split_benchmark.rs  large_graph_benchmark.rs  large_graph_benchmark_fixed.rs  road_network_benchmark.rs  scientific_benchmark.rs  simple_example.rs  smart_sssp_benchmark.rs  smart_sssp_example.rs  very_large_benchmark.rs
src/: ffi.rs  lib.rs  python.rs
src/algorithm/: bmssp.rs  dijkstra.rs  fast_sssp.rs  mod.rs  smart_sssp.rs  traits.rs
src/data_structures/: block_list.rs  mod.rs  priority_queue.rs
src/graph/: constant_degree.rs  directed.rs  generators.rs  hub_split.rs  mod.rs  traits.rs
src/web/: api.rs  mod.rs  models.rs  server.rs
tests/: block_list_tests.rs  bmssp_base_case.rs  path_finding_tests.rs
web/: index.html  styles.css
web/js/: api-client.js  app.js  graph-generator.js  visualizer.js
